// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should compute historical networth 3`] = `
[
  {
    "change": 0,
    "changePercentage": 0,
    "time": 1504137600,
    "timestamp": 1504137600000,
    "value": 0,
  },
  {
    "change": 178.03,
    "changePercentage": 0,
    "time": 1504224000,
    "timestamp": 1504224000000,
    "value": 178.03,
  },
  {
    "change": -10.73,
    "changePercentage": -6.03,
    "time": 1504310400,
    "timestamp": 1504310400000,
    "value": 167.3,
  },
  {
    "change": -0.86,
    "changePercentage": -0.51,
    "time": 1504396800,
    "timestamp": 1504396800000,
    "value": 166.44,
  },
  {
    "change": -4.6,
    "changePercentage": -2.76,
    "time": 1504483200,
    "timestamp": 1504483200000,
    "value": 161.84,
  },
  {
    "change": -2.36,
    "changePercentage": -1.46,
    "time": 1504569600,
    "timestamp": 1504569600000,
    "value": 159.48,
  },
  {
    "change": 6.61,
    "changePercentage": 4.14,
    "time": 1504656000,
    "timestamp": 1504656000000,
    "value": 166.09,
  },
  {
    "change": 171.28,
    "changePercentage": 103.12,
    "time": 1504742400,
    "timestamp": 1504742400000,
    "value": 337.37,
  },
  {
    "change": -20,
    "changePercentage": -5.93,
    "time": 1504828800,
    "timestamp": 1504828800000,
    "value": 317.37,
  },
  {
    "change": -1.14,
    "changePercentage": -0.36,
    "time": 1504915200,
    "timestamp": 1504915200000,
    "value": 316.23,
  },
  {
    "change": -6.06,
    "changePercentage": -1.92,
    "time": 1505001600,
    "timestamp": 1505001600000,
    "value": 310.17,
  },
  {
    "change": -2.96,
    "changePercentage": -0.95,
    "time": 1505088000,
    "timestamp": 1505088000000,
    "value": 307.21,
  },
  {
    "change": -3.37,
    "changePercentage": -1.1,
    "time": 1505174400,
    "timestamp": 1505174400000,
    "value": 303.84,
  },
  {
    "change": -22.56,
    "changePercentage": -7.42,
    "time": 1505260800,
    "timestamp": 1505260800000,
    "value": 281.28,
  },
  {
    "change": -44.14,
    "changePercentage": -15.69,
    "time": 1505347200,
    "timestamp": 1505347200000,
    "value": 237.14,
  },
]
`;

exports[`should refresh networth 3`] = `
[
  {
    "change": 0,
    "changePercentage": 0,
    "time": 1504137600,
    "timestamp": 1504137600000,
    "value": 0,
  },
  {
    "change": 178.03,
    "changePercentage": 0,
    "time": 1504224000,
    "timestamp": 1504224000000,
    "value": 178.03,
  },
  {
    "change": -10.73,
    "changePercentage": -6.03,
    "time": 1504310400,
    "timestamp": 1504310400000,
    "value": 167.3,
  },
  {
    "change": -0.86,
    "changePercentage": -0.51,
    "time": 1504396800,
    "timestamp": 1504396800000,
    "value": 166.44,
  },
  {
    "change": -4.6,
    "changePercentage": -2.76,
    "time": 1504483200,
    "timestamp": 1504483200000,
    "value": 161.84,
  },
  {
    "change": -2.36,
    "changePercentage": -1.46,
    "time": 1504569600,
    "timestamp": 1504569600000,
    "value": 159.48,
  },
  {
    "change": 6.61,
    "changePercentage": 4.14,
    "time": 1504656000,
    "timestamp": 1504656000000,
    "value": 166.09,
  },
  {
    "change": 171.28,
    "changePercentage": 103.12,
    "time": 1504742400,
    "timestamp": 1504742400000,
    "value": 337.37,
  },
  {
    "change": -20,
    "changePercentage": -5.93,
    "time": 1504828800,
    "timestamp": 1504828800000,
    "value": 317.37,
  },
  {
    "change": -1.14,
    "changePercentage": -0.36,
    "time": 1504915200,
    "timestamp": 1504915200000,
    "value": 316.23,
  },
  {
    "change": -6.06,
    "changePercentage": -1.92,
    "time": 1505001600,
    "timestamp": 1505001600000,
    "value": 310.17,
  },
  {
    "change": -2.96,
    "changePercentage": -0.95,
    "time": 1505088000,
    "timestamp": 1505088000000,
    "value": 307.21,
  },
  {
    "change": -3.37,
    "changePercentage": -1.1,
    "time": 1505174400,
    "timestamp": 1505174400000,
    "value": 303.84,
  },
  {
    "change": -22.56,
    "changePercentage": -7.42,
    "time": 1505260800,
    "timestamp": 1505260800000,
    "value": 281.28,
  },
  {
    "change": 0,
    "changePercentage": 0,
    "time": 1505347200,
    "timestamp": 1505347200000,
    "value": 237.14,
  },
]
`;
